update knowledge graph - add helper + sample questions

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/2_AzureOpenAI_GraphDB_RAG_data_preparation.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/2_AzureOpenAI_GraphDB_RAG_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "Node properties are the following:\n",
-      "Movie {imdbRating: FLOAT, taglineEmbedding: LIST, id: STRING, released: DATE, title: STRING, tagline: STRING},Person {name: STRING},Genre {name: STRING}\n",
+      "Movie {imdbRating: FLOAT, tagline: STRING, id: STRING, released: DATE, title: STRING},Person {name: STRING},Genre {name: STRING}\n",
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[{'count(n)': 132}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,17 +250,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +376,7 @@
        "2  Still Yelling. Still Fighting. Still Ready for...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +429,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                             The adventure takes off!\n",
+       "1            Roll the dice and unleash the excitement!\n",
+       "2    Still Yelling. Still Fighting. Still Ready for...\n",
+       "Name: tagline, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"tagline\"][:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +482,7 @@
        " -0.020980820059776306]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +598,7 @@
        "2  [-0.02191801927983761, -0.022048715502023697, ...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +626,7 @@
        "[]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -631,11 +667,11 @@
        "  'properties': ['taglineEmbedding'],\n",
        "  'indexProvider': 'vector-1.0',\n",
        "  'owningConstraint': None,\n",
-       "  'lastRead': neo4j.time.DateTime(2024, 4, 28, 1, 47, 24, 253000000, tzinfo=<UTC>),\n",
-       "  'readCount': 5}]"
+       "  'lastRead': None,\n",
+       "  'readCount': 0}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +710,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>released</th>\n",
+       "      <th>title</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>taglineEmbedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1995-11-22</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Jim Varney|Tim Allen|Tom Hanks|Don Rickles</td>\n",
+       "      <td>John Lasseter</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>The adventure takes off!</td>\n",
+       "      <td>[0.023812185972929, -0.036298904567956924, -0....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...</td>\n",
+       "      <td>Joe Johnston</td>\n",
+       "      <td>Adventure|Children|Fantasy</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>[-0.005139722488820553, -0.015951087698340416,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...</td>\n",
+       "      <td>Howard Deutch</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>[-0.02191801927983761, -0.022048715502023697, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId    released             title  \\\n",
+       "0        1  1995-11-22         Toy Story   \n",
+       "1        2  1995-12-15           Jumanji   \n",
+       "2        3  1995-12-22  Grumpier Old Men   \n",
+       "\n",
+       "                                              actors       director  \\\n",
+       "0         Jim Varney|Tim Allen|Tom Hanks|Don Rickles  John Lasseter   \n",
+       "1  Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...   Joe Johnston   \n",
+       "2  Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...  Howard Deutch   \n",
+       "\n",
+       "                                        genres  imdbRating  \\\n",
+       "0  Adventure|Animation|Children|Comedy|Fantasy         8.3   \n",
+       "1                   Adventure|Children|Fantasy         6.9   \n",
+       "2                               Comedy|Romance         6.6   \n",
+       "\n",
+       "                                             tagline  \\\n",
+       "0                           The adventure takes off!   \n",
+       "1          Roll the dice and unleash the excitement!   \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...   \n",
+       "\n",
+       "                                    taglineEmbedding  \n",
+       "0  [0.023812185972929, -0.036298904567956924, -0....  \n",
+       "1  [-0.005139722488820553, -0.015951087698340416,...  \n",
+       "2  [-0.02191801927983761, -0.022048715502023697, ...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +851,7 @@
      "output_type": "stream",
      "text": [
       "Node properties are the following:\n",
-      "Movie {imdbRating: FLOAT, taglineEmbedding: LIST, id: STRING, released: DATE, title: STRING, tagline: STRING},Person {name: STRING},Genre {name: STRING}\n",
+      "Movie {imdbRating: FLOAT, taglineEmbedding: LIST, tagline: STRING, id: STRING, released: DATE, title: STRING},Person {name: STRING},Genre {name: STRING}\n",
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
@@ -723,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +897,7 @@
        "'The adventure takes off!'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +926,7 @@
        " -0.014600458554923534]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
