--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,20 +54,6 @@
     "  azure_endpoint = azure_openai_endpoint\n",
     ")\n",
     "\n",
-    "def embed_text(text):\n",
-    "    response = client.embeddings.create(\n",
-    "    input = text,\n",
-    "    model= \"text-embedding-ada-002\"\n",
-    "    )\n",
-    "    return response.data[0].embedding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def embed_text(text:str)->List:\n",
     "    \"\"\"\n",
     "    Embeds the given text using the specified model.\n",
@@ -94,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +142,7 @@
        " -0.008066943846642971]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +184,7 @@
        "  'score': 0.8755828142166138}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,22 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the search results, the movies that are about love are:\n",
+      "Here are some movies that are about love:\n",
       "\n",
-      "1. Heat - \"A Los Angeles crime saga\"\n",
-      "2. Grumpier Old Men - \"Still Yelling. Still Fighting. Still Ready for Love.\"\n",
-      "3. Tom and Huck - \"The Original Bad Boys.\"\n",
-      "4. Sense and Sensibility - \"Lose your heart and come to your senses.\"\n",
-      "5. Balto - \"Part Dog. Part Wolf. All Hero.\"\n",
+      "1. Heat - A Los Angeles crime saga.\n",
+      "2. Grumpier Old Men - Still Yelling. Still Fighting. Still Ready for Love.\n",
+      "3. Tom and Huck - The Original Bad Boys.\n",
+      "4. Sense and Sensibility - Lose your heart and come to your senses.\n",
+      "5. Balto - Part Dog. Part Wolf. All Hero.\n",
       "\n",
-      "These movies explore different aspects of love and relationships.\n"
+      "These movies revolve around the theme of love in different ways.\n"
      ]
     }
    ],
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +271,7 @@
       "1. Toy Story - The adventure takes off!\n",
       "2. Cutthroat Island - The Course Has Been Set. There Is No Turning Back. Prepare Your Weapons. Summon Your Courage. Discover the Adventure of a Lifetime!\n",
       "3. Tom and Huck - The Original Bad Boys.\n",
-      "4. Jumanji - Roll the dice and unleash the excitement!\n",
-      "\n",
-      "Is there anything else I can help with?\n"
+      "4. Jumanji - Roll the dice and unleash the excitement!\n"
      ]
     }
    ],
