--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/test_gpt_and_embedding_model.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/test_gpt_and_embedding_model.ipynb
@@ -28,19 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = \"gpt-35-turbo-1106\"\n",
-    "model_name = \"gpt-35-turbo\"\n",
+    "# model_name = \"gpt-35-turbo\"\n",
     "azure_openai_api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "azure_openai_endpoint = os.environ[\"OPENAI_API_BASE\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'2023-07-01-preview'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hey there! How's it going? Just kidding, I'm a comedian, I don't really care. But seriously, what's up?\""
+       "\"Hey there! How's it going? Just kidding, I'm a language model AI, I don't have feelings! But I can definitely try to make you laugh. What's up?\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
