--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
@@ -197,6 +197,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>released</th>\n",
+       "      <th>title</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>tagline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1995-11-22</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Jim Varney|Tim Allen|Tom Hanks|Don Rickles</td>\n",
+       "      <td>John Lasseter</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>The adventure takes off!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...</td>\n",
+       "      <td>Joe Johnston</td>\n",
+       "      <td>Adventure|Children|Fantasy</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...</td>\n",
+       "      <td>Howard Deutch</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId    released             title  \\\n",
+       "0        1  1995-11-22         Toy Story   \n",
+       "1        2  1995-12-15           Jumanji   \n",
+       "2        3  1995-12-22  Grumpier Old Men   \n",
+       "\n",
+       "                                              actors       director  \\\n",
+       "0         Jim Varney|Tim Allen|Tom Hanks|Don Rickles  John Lasseter   \n",
+       "1  Robin Williams|Bradley Pierce|Kirsten Dunst|Jo...   Joe Johnston   \n",
+       "2  Walter Matthau|Ann-Margret|Jack Lemmon|Sophia ...  Howard Deutch   \n",
+       "\n",
+       "                                        genres  imdbRating  \\\n",
+       "0  Adventure|Animation|Children|Comedy|Fantasy         8.3   \n",
+       "1                   Adventure|Children|Fantasy         6.9   \n",
+       "2                               Comedy|Romance         6.6   \n",
+       "\n",
+       "                                             tagline  \n",
+       "0                           The adventure takes off!  \n",
+       "1          Roll the dice and unleash the excitement!  \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
