update knowledge graph project - added improved agent to the chatbot + updated the notebooks + add synthetic columns to the dataset

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,12 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate some taglines using chatgot:\n",
-    "taglines = [\"The adventure takes off!\",\n",
+    "tagline = [\"The adventure takes off!\",\n",
     "\"Roll the dice and unleash the excitement!\",\n",
     "\"Still Yelling. Still Fighting. Still Ready for Love.\",\n",
     "\"Friends are the people who let you be yourself... and never let you forget it.\",\n",
@@ -184,21 +184,34 @@
     "\"Lose your heart and come to your senses.\",\n",
     "\"Twelve outrageous guests. Four scandalous requests. And one lone bellhop, in his first day on the job, who's in for the wildest New year's Eve of his life.\",\n",
     "\"New animals. New adventures. Same hair.\",\n",
-    "\"Get on, or GET OUT THE WAY!\"]"
+    "\"Get on, or GET OUT THE WAY!\"]\n",
+    "\n",
+    "location = [\"United States\", \"United States\", \"United States\", \"United States\", \"United States\", \n",
+    "           \"United States\", \"United States\", \"United States\", \"United States\", \"United Kingdom\", \n",
+    "           \"United States\", \"United States\", \"United States\", \"United States\", \"Malta\", \n",
+    "           \"United States\", \"United Kingdom\", \"United States\", \"United States\", \"United States\"]\n",
+    "\n",
+    "similar_movie = [\"Finding Nemo\", \"Jumanji: Welcome to the Jungle\", \"The Bucket List\", \"The Best Man Holiday\", \"Cheaper by the Dozen\", \n",
+    "                 \"The Departed\", \"Notting Hill\", \"The Adventures of Huck Finn\", \"Die Hard\", \"Mission Impossible\", \n",
+    "                 \"Dave\", \"Dead and Loving It: Young Frankenstein\", \"Spirit: Stallion of the Cimarron\", \"JFK\", \"Pirates of the Caribbean: The Curse of the Black Pearl\",\n",
+    "                 \"Goodfellas\", \"Pride and Prejudice\", \"Pulp Fiction\", \"The Mask\", \"Speed\"\n",
+    "                 ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"tagline\"] = taglines"
+    "df[\"similar_movie\"] = similar_movie\n",
+    "df[\"tagline\"] = tagline\n",
+    "df[\"location\"] = location"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +242,9 @@
        "      <th>director</th>\n",
        "      <th>genres</th>\n",
        "      <th>imdbRating</th>\n",
+       "      <th>similar_movie</th>\n",
        "      <th>tagline</th>\n",
+       "      <th>location</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -242,7 +257,9 @@
        "      <td>John Lasseter</td>\n",
        "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "      <td>8.3</td>\n",
+       "      <td>Finding Nemo</td>\n",
        "      <td>The adventure takes off!</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -253,7 +270,9 @@
        "      <td>Joe Johnston</td>\n",
        "      <td>Adventure|Children|Fantasy</td>\n",
        "      <td>6.9</td>\n",
+       "      <td>Jumanji: Welcome to the Jungle</td>\n",
        "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -264,7 +283,9 @@
        "      <td>Howard Deutch</td>\n",
        "      <td>Comedy|Romance</td>\n",
        "      <td>6.6</td>\n",
+       "      <td>The Bucket List</td>\n",
        "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,13 +307,18 @@
        "1                   Adventure|Children|Fantasy         6.9   \n",
        "2                               Comedy|Romance         6.6   \n",
        "\n",
-       "                                             tagline  \n",
-       "0                           The adventure takes off!  \n",
-       "1          Roll the dice and unleash the excitement!  \n",
-       "2  Still Yelling. Still Fighting. Still Ready for...  "
+       "                    similar_movie  \\\n",
+       "0                    Finding Nemo   \n",
+       "1  Jumanji: Welcome to the Jungle   \n",
+       "2                 The Bucket List   \n",
+       "\n",
+       "                                             tagline       location  \n",
+       "0                           The adventure takes off!  United States  \n",
+       "1          Roll the dice and unleash the excitement!  United States  \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...  United States  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
