--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/empty_graphdb.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/empty_graphdb.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.graphs import Neo4jGraph\n",
-    "# from neo4j.debug import watch\n",
-    "# watch(\"neo4j\")"
+    "from langchain_community.graphs import Neo4jGraph"
    ]
   },
   {
@@ -25,17 +23,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "graph = Neo4jGraph(url=NEO4J_URI, username=NEO4J_USERNAME, password=NEO4J_PASSWORD, database=NEO4J_DATABASE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete everything in a database\n",
+    "cypher = \"\"\"\n",
+    "MATCH (n)\n",
+    "DETACH DELETE n\n",
+    "\"\"\"\n",
+    "graph.query(cypher)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kg-env",
+   "display_name": "playaround",
    "language": "python",
    "name": "python3"
   },
